# ellice

./: .gitignore  LICENSE  README.md  debug_data.py  demo.py  ellice_demo.ipynb  full_test_ellice.py  pyproject.toml  setup.py  test_ellice.py
.github/workflows/: python-package.yml
ellice/: __init__.py  data.py  explainer.py
ellice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ellice/configs/: __init__.py  algorithm_config.py  generation_config.py
ellice/generators/: __init__.py  base.py  continuous.py  data_supported.py  discrete.py  sparse_continuous.py
ellice/models/: __init__.py  wrappers.py
ellice/utils/: __init__.py  config.py  helpers.py
tests/: pytest.ini  test_advanced_features.py  test_config.yaml  test_ellice_core.py
